--- a/board/src/main/resources/application.yaml
+++ b/board/src/main/resources/application.yaml
@@ -9,21 +9,20 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/board
-    username: gamza
+    url: jdbc:mariadb://127.0.0.1:3306/board
+    username: root
     password: 1394
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
+    open-in-view: false
     defer-datasource-initialization: true
     hibernate.ddl-auto: create
-    open-in-view: false
     show-sql: true
     properties:
       hibernate.format_sql: true
       hibernate.default_batch_fetch_size: 100
-  h2.console.enabled: false
   sql.init.mode: always
-  data:
-    rest:
-      base-path: /api
-      detection-strategy: annotated
+  data.rest:
+    base-path: /api
+    detection-strategy: annotated
+#  thymeleaf3.decoupled-logic: true
