인코딩 문제로 인한 주석 제외

--- a/board/src/main/resources/application.yaml
+++ b/board/src/main/resources/application.yaml
@@ -1,11 +1,11 @@
 debug: false
-management.endpoints.web.exposure.include: "*" # actuator ? ??? ???? ?? ??.
+management.endpoints.web.exposure.include: "*"
 
 logging:
   level:
-    com.deploykube.board: debug # ??? ??? ???? ??
+    com.deploykube.board: debug
     org.springframework.web.servlet: debug
-    org.hibernate.type.descriptor.sql.BasicBinder: trace # JPA ??? query ??? ????. ??? ???? ????
+    org.hibernate.type.descriptor.sql.BasicBinder: trace
 
 spring:
   datasource:
